<resources>
    <string name="app_name">TopicosAndroid</string>
    <string name="action_settings">Settings</string>

    <string name="status">Status:</string>
    <string name="ends_at">Termina em </string>
    <string name="subject">Disciplina:</string>
    <string name="title">Título:</string>
    <string name="description">Descrição:</string>
    <string name="attachment">Anexo:</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_invalid_password">This password is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

</resources>
