<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    tools:context="com.topicos.topicosandroid.LoginActivity">

    <LinearLayout
        android:id="@+id/logo_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:layout_marginTop="80dp"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="50dp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:text="SIGAA-"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="50dp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:text="X"/>

    </LinearLayout>

    <!-- Login progress -->
    <ProgressBar android:id="@+id/login_progress" style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone" />


    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_below="@+id/logo_login"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp">
        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/username" android:layout_width="match_parent"
                android:layout_height="50dp" android:hint="@string/prompt_username"
                android:inputType="textEmailAddress" android:maxLines="1"
                android:background="@android:color/white"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:textSize="22dp"
                android:singleLine="true" />

            <EditText android:id="@+id/password" android:layout_width="match_parent"
                android:layout_height="50dp" android:hint="@string/prompt_password"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified" android:inputType="textPassword"
                android:background="@android:color/white"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:textSize="22dp"
                android:maxLines="1" android:singleLine="true" />

            <Button android:id="@+id/sign_in_button" style="?android:textAppearanceSmall"
                android:layout_width="match_parent" android:layout_height="50dp"
                android:layout_marginTop="10dp" android:text="@string/action_sign_in"
                android:background="@color/colorPrimaryDark"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
